Add descriptions to all handlers and include a "run list" subcommand
Signed-off-by: Ikey Doherty <ikey@solus-project.com>

--- a/man/usysconf.1.html
+++ b/man/usysconf.1.html
@@ -95,6 +95,9 @@ actions to configure components such as kernels or the dynamic linker cache.</p>
 
 <pre><code>When called without any arguments, all system triggers will be executed.
 Alternatively, you may provide a list of triggers to run directly.
+
+The special value "list" will cause all known triggers to be listed
+instead of executing them.
 </code></pre>
 
 <p><code>help</code></p>
