--- a/man/usysconf.1.html
+++ b/man/usysconf.1.html
@@ -56,6 +56,7 @@
     <a href="#NAME">NAME</a>
     <a href="#SYNOPSIS">SYNOPSIS</a>
     <a href="#DESCRIPTION">DESCRIPTION</a>
+    <a href="#OPTIONS">OPTIONS</a>
     <a href="#SUBCOMMANDS">SUBCOMMANDS</a>
     <a href="#FILES">FILES</a>
     <a href="#EXIT-STATUS">EXIT STATUS</a>
@@ -88,6 +89,18 @@ tasks within a well defined centralised location.</p>
 <p><code>usysconf</code> will run a variety of triggers to ensure system consistency and
 health, detecting changes within the filesystem and taking any appropriate
 actions to configure components such as kernels or the dynamic linker cache.</p>
+
+<h2 id="OPTIONS">OPTIONS</h2>
+
+<p>The following options are applicable to <code>usysconf(1)</code>.</p>
+
+<ul>
+<li><p><code>-f</code>, <code>--force</code></p>
+
+<p>Force a trigger to run, even if the local file doesn't seem to have been
+updated.</p></li>
+</ul>
+
 
 <h2 id="SUBCOMMANDS">SUBCOMMANDS</h2>
 
