--- a/man/usysconf.1.html
+++ b/man/usysconf.1.html
@@ -78,7 +78,7 @@
 
 <h2 id="SYNOPSIS">SYNOPSIS</h2>
 
-<p><code>usysconf run [trigggers]</code></p>
+<p><code>usysconf run [triggers]</code></p>
 
 <h2 id="DESCRIPTION">DESCRIPTION</h2>
 
@@ -189,7 +189,7 @@ triggers do run again.
 
   <ol class='man-decor man-foot man foot'>
     <li class='tl'></li>
-    <li class='tc'>November 2017</li>
+    <li class='tc'>December 2017</li>
     <li class='tr'>usysconf(1)</li>
   </ol>
 
