--- a/man/usysconf.1.html
+++ b/man/usysconf.1.html
@@ -164,7 +164,7 @@ triggers do run again.
 <h2 id="COPYRIGHT">COPYRIGHT</h2>
 
 <ul>
-<li>Copyright © 2017 Ikey Doherty, License: CC-BY-SA-3.0</li>
+<li>Copyright © 2017-2018 Ikey Doherty, License: CC-BY-SA-3.0</li>
 </ul>
 
 
@@ -189,7 +189,7 @@ triggers do run again.
 
   <ol class='man-decor man-foot man foot'>
     <li class='tl'></li>
-    <li class='tc'>December 2017</li>
+    <li class='tc'>January 2018</li>
     <li class='tr'>usysconf(1)</li>
   </ol>
 
